<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bg_main_background">

	<!-- Register button -->
	<Button
		android:id="@+id/new_account_button"
		android:layout_marginTop="625dp"
		android:layout_marginStart="789dp"
		android:layout_width="360dp"
		android:layout_height="60dp"
		android:background="@drawable/button_shape"
		android:layout_gravity="center_horizontal|center"
		android:gravity="center"
		android:textSize="30sp"
		android:textColor="@color/main_text_color"
		android:text="@string/register_string"
		android:textAllCaps="false"
		/>


	<!-- Confirm Password Input -->
	<RelativeLayout android:id="@+id/confirm_password_input"
		android:layout_marginTop="510dp"
		android:layout_marginStart="790dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>

		<TextView android:id="@+id/password_label"
			android:textSize="15sp"
			android:textColor="@color/main_text_color"
			android:layout_marginTop="1dp"
			android:layout_width="152.5dp"
			android:layout_height="22.5dp"
			android:text="@string/enter_your_password_ek1_string" />

		<!-- Changed it from just a view to EditText to make it functional for entering text -->
		<EditText
			android:id="@+id/input_box_confirm_password"
			android:layout_width="360dp"
			android:layout_height="52.5dp"
			android:layout_alignParentStart="true"
			android:layout_marginStart="0dp"
			android:layout_marginTop="21.5dp"
			android:background="@drawable/input_box_shape"
			android:hint="@string/enter_your_password_ek1_string"
			android:inputType="textPassword"
			android:paddingLeft="12dp"
			android:textColor="@color/white"
			android:textColorHint="@color/hint_input_color"
			android:textSize="16sp" /> <!-- Added this line for left padding -->
	</RelativeLayout>

	<!-- Password Input -->
	<RelativeLayout android:id="@+id/password_input"
		android:layout_marginTop="422dp"
		android:layout_marginStart="789dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>

		<TextView android:id="@+id/password_label_ek1"
			android:textSize="15sp"
			android:textColor="@color/main_text_color"
			android:layout_marginTop="1dp"
			android:layout_width="87.5dp"
			android:layout_height="22.5dp"
			android:text="@string/password_label_string" />

		<EditText
			android:id="@+id/input_box_password"
			android:layout_width="360dp"
			android:layout_height="52.5dp"
			android:layout_alignParentStart="true"
			android:layout_marginTop="21.5dp"
			android:background="@drawable/input_box_shape"
			android:hint="@string/enter_your_password_string"
			android:inputType="textPassword"
			android:paddingLeft="12dp"
			android:textColor="@color/white"
			android:textColorHint="@color/hint_input_color"
			android:textSize="16sp" /> <!-- Added this line for left padding -->
	</RelativeLayout>

	<!-- University Email Input -->
	<RelativeLayout android:id="@+id/email_input_component_container"
		android:layout_marginTop="334dp"
		android:layout_marginStart="789dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>

		<TextView android:id="@+id/email_label"
			android:textSize="15sp"
			android:textColor="@color/main_text_color"
			android:layout_marginTop="1dp"
			android:layout_width="136.5dp"
			android:layout_height="22.5dp"
			android:text="@string/email_label_string" />

		<!-- changed it from just a view to EditText to make it functional for entering text -->
		<EditText
			android:id="@+id/input_box_email"
			android:layout_width="360dp"
			android:layout_height="52.5dp"
			android:layout_alignParentStart="true"
			android:layout_marginTop="21.5dp"
			android:background="@drawable/input_box_shape"
			android:hint="@string/enter_your_email_string"
			android:inputType="text"
			android:paddingLeft="12dp"
			android:textColor="@color/white"
			android:textColorHint="@color/hint_input_color"
			android:textSize="16sp" /> <!-- Added this line for left padding -->
	</RelativeLayout>

	<!-- Full Name Input -->
	<RelativeLayout android:id="@+id/fullname_input_component_container"
		android:layout_marginTop="246dp"
		android:layout_marginStart="789dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>

		<TextView android:id="@+id/fullname_label"
			android:textSize="15sp"
			android:textColor="@color/main_text_color"
			android:layout_marginTop="1dp"
			android:layout_width="136.5dp"
			android:layout_height="22.5dp"
			android:text="@string/fullname_label_string" />

		<!-- changed it from just a view to EditText to make it functional for entering text -->
		<EditText
			android:id="@+id/input_box_fullname"
			android:layout_width="360dp"
			android:layout_height="52.5dp"
			android:layout_alignParentStart="true"
			android:layout_marginStart="0dp"
			android:layout_marginTop="21.5dp"
			android:background="@drawable/input_box_shape"
			android:hint="@string/enter_your_fullname_string"
			android:inputType="text"
			android:paddingLeft="12dp"
			android:textColor="@color/white"
			android:textColorHint="@color/hint_input_color"
			android:textSize="16sp" /> <!-- Added this line for left padding -->
	</RelativeLayout>

	<!-- Create An Account Picture -->
	<ImageView android:id="@+id/create_an_account_picture"
		android:src="@drawable/create_an_account_picture"
		android:contentDescription="create_an_account_picture"
		android:layout_marginStart="41dp"
		android:layout_marginTop="125dp"
		android:layout_width="631dp"
		android:layout_height="550dp" />

	<!--Back Button-->
	<Button
		android:id="@+id/back_space_create_an_account"
		android:layout_marginTop="50dp"
		android:layout_marginStart="41dp"
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:background="@drawable/bg_main_background"
		android:drawableStart="@drawable/back_space"
		android:contentDescription="back_space_in_log_in"
		android:text=""
		android:onClick="onButtonClick"/>

	<!-- Already Planning Hyperlink -->
	<RelativeLayout android:id="@+id/log_in_hyperlink"
		android:layout_marginTop="688dp"
		android:layout_marginStart="917dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>

		<TextView
			android:id="@+id/log_in_hyperlink_ek2"
			android:layout_width="244dp"
			android:layout_height="26.2dp"
			android:layout_alignParentStart="true"
			android:layout_alignParentTop="true"
			android:layout_gravity="center_horizontal|center"
			android:layout_marginStart="-2dp"
			android:layout_marginLeft="-3dp"
			android:layout_marginTop="0dp"
			android:gravity="center"
			android:onClick="onGetStartedClick"
			android:text="@string/log_in_hyperlink_ek2_string"
			android:textColor="@color/main_text_color"
			android:textSize="17sp"
			android:textStyle="bold" />

		<ImageView android:id="@+id/line_3"
			android:src="@drawable/line"
			android:contentDescription="log_in_hyperlink"
			android:layout_marginStart="1dp"
			android:layout_marginTop="21dp"
			android:layout_width="226dp"
			android:layout_height="2dp" />
	</RelativeLayout>

	<!-- Create An Account Title -->
	<RelativeLayout android:id="@+id/create_an_account"
		android:layout_marginTop="78dp"
		android:layout_marginStart="785dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>

		<TextView android:id="@+id/create_an"
			android:layout_gravity="center_horizontal|center"
			android:gravity="center"
			android:textSize="75sp"
			android:textColor="@color/main_text_color"
			android:layout_marginLeft="-13dp"
			android:layout_width="368dp"
			android:layout_height="85dp"
			android:text="@string/create_an_string" />

		<TextView android:id="@+id/account_"
			android:layout_gravity="center_horizontal|center"
			android:gravity="center"
			android:textSize="75sp"
			android:textColor="@color/main_text_color"
			android:layout_marginLeft="6dp"
			android:layout_marginTop="68dp"
			android:layout_width="332dp"
			android:layout_height="85dp"
			android:text="@string/account__string" />
	</RelativeLayout>
</RelativeLayout>