...
			android:textColorHint="@color/hint_input_color"
			android:textSize="16sp" /> <!-- Added this line for left padding -->
	</RelativeLayout>

	<!--Login Button-->
	<Button
		android:id="@+id/log_in_button_ek4"
		android:layout_marginTop="584dp"
		android:layout_marginStart="772dp"
		android:layout_width="359dp"
		android:layout_height="62dp"
		android:background="@drawable/button_shape"
		android:onClick="onGetStartedClick"
...
