...
		android:background="@drawable/picture_background"
		android:layout_width="1280dp"
		android:layout_height="218dp" />

	<!-- User Profile button -->
	<Button
		android:id="@+id/user_profile_button"
		android:layout_marginTop="410dp"
		android:layout_marginStart="102dp"
		android:layout_width="210dp"
		android:layout_height="40dp"
		android:background="@drawable/button_shape"
		android:textStyle="bold"
...
